--- a/public/index.html
+++ b/public/index.html
@@ -208,9 +208,9 @@
                   </div>
                   <div class="skill-item">
                      <h5>Leadership</h5>
-                     <span>70%</span>
+                     <span>80%</span>
                      <div class="progress" data-percent="70%">
-                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                      </div>
                   </div>
                   <div class="skill-item">
@@ -235,7 +235,7 @@
                      </div>
                   </div>
                   <div class="skill-item">
-                     <h5>Katalon</h5>
+                     <h5>Git</h5>
                      <span>80%</span>
                      <div class="progress" data-percent="80%">
                         <div class="progress-bar bar-null" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
@@ -245,9 +245,9 @@
                <div class="col-md-6 mt-100">
                   <div class="skill-item">
                      <h5>Javascript</h5>
-                     <span>50%</span>
-                     <div class="progress" data-percent="50%">
-                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+                     <span>70%</span>
+                     <div class="progress" data-percent="70%">
+                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
                      </div>
                   </div>
                   <div class="skill-item">
