changed services and added icons

--- a/public/index.html
+++ b/public/index.html
@@ -93,21 +93,21 @@
                         <div class="end-top"></div>
                      </div>
 
-                     <div class="col-md-4 d-flex mb-3">
+                     <!-- <div class="col-md-4 d-flex mb-3">
                         <div class="icon"><i class="fas fa-phone"></i></div>
                         <div class="text">
                            <h3>Phone</h3>
                            <p>+234 809-387-1794</p>
                         </div>
-                     </div>
-                     <div class="col-md-4 d-flex mb-3">
+                     </div> -->
+                     <div class="col-md-6 d-flex mb-4">
                         <div class="icon"><i class="fas fa-map-marked-alt"></i></div>
                         <div class="text">
                            <h3>Address</h3>
                            <p>Lagos, Nigeria</p>
                         </div>
                      </div>
-                     <div class="col-md-4 d-flex mb-3">
+                     <div class="col-md-6 d-flex mb-4">
                         <div class="icon"><i class="fas fa-envelope"></i></div>
                         <div class="text">
                            <h3>Email</h3>
@@ -166,27 +166,7 @@
                            <span>
                               Age:
                            </span>
-                           <p>27 Years young</p>
-                        </div>
-                     </div>
-                     <div class="row">
-                        <div class="col-lg-4 col-md-12 col-sm-12 single-info">
-                           <span>
-                              Phone:
-                           </span>
-                           <p><a href="tel:+2348093871794" class="text-custom">+234 809-387-1794</a></p>
-                        </div>
-                        <div class="col-lg-4 col-md-12 col-sm-12 single-info">
-                           <span>
-                              Stack:
-                           </span>
-                           <p>Java | JS</p>
-                        </div>
-                        <div class="col-lg-4 col-md-12 col-sm-12 single-info">
-                           <span>
-                              Where:
-                           </span>
-                           <p>Lagos, Nigeria</p>
+                           <p>27 years young</p>
                         </div>
                      </div>
                   </div>
@@ -323,10 +303,10 @@
                <div class="col-md-3 ">
                   <div class="media d-block text-center block-service services">
                      <div class="icon d-flex justify-content-center align-items-center mb-4">
-                        <i class="fas fa-paint-brush"></i>
+                        <i class="fas fa-robot"></i>
                      </div>
                      <div class="media-body">
-                        <h3 class="heading">Design Verification</h3>
+                        <h3 class="heading">Test Automation</h3>
                      </div>
                   </div>
                </div>
@@ -372,7 +352,7 @@
                      <h4><span class="item-icon"><i class="fas fa-briefcase"></i></span><a href="https://www.intelia.io" target="_blank">Intelia Inc.</a></h4>
                      <span class="meta">03.2019 - Present</span>
                      <h5>Quality Assurance Lead</h5>
-                     <p>As a service-based company, I’ve had the opportunity of working on a wide range of products such as The Good Traveler by Oxfam (Charitable Travel Experience Web Platform), Let’s Eat (Restaurant/E-Commerce Mobile App), Crunchtime (Sports Streaming platform), IGR MAX (Revenue Collection Platform for web and mobile), Google, University of Pittsburgh and others.</p>
+                     <p>As a service-based company, I’ve had the opportunity of working on a wide range of products such as The Good Traveler by Oxfam (Charitable Travel Experience Web Platform), Let’s Eat (Restaurant/E-Commerce Mobile App), Crunchtime (Sports Streaming platform), IGR MAX (Revenue Collection Platform for web and mobile), other products for Google, University of Pittsburgh and others.</p>
                   </div>
                   <div class="item mb-40">
                      <h4><span class="item-icon"><i class="fas fa-briefcase"></i></span><a href="https://www.appzonegroup.com" target="_blank">Appzone Group</a></h4>
