changed intelia details

--- a/public/index.html
+++ b/public/index.html
@@ -352,7 +352,7 @@
                      <h4><span class="item-icon"><i class="fas fa-briefcase"></i></span><a href="https://www.intelia.io" target="_blank">Intelia Inc.</a></h4>
                      <span class="meta">03.2019 - Present</span>
                      <h5>Quality Assurance Lead</h5>
-                     <p>As a service-based company, I’ve had the opportunity of working on a wide range of products such as The Good Traveler by Oxfam (Charitable Travel Experience Web Platform), Let’s Eat (Restaurant/E-Commerce Mobile App), Crunchtime (Sports Streaming platform), IGR MAX (Revenue Collection Platform for web and mobile), other products for Google, University of Pittsburgh and others.</p>
+                     <p>As a service-based company, I’ve had the opportunity of working on a wide range of products such as The Good Traveler by Oxfam (Charitable Travel Experience Web Platform), Let’s Eat (Restaurant/E-Commerce Mobile App), Crunchtime (Sports Streaming platform), IGR MAX (Revenue Collection Platform for web and mobile), other products for companies like Google, University of Pittsburgh and others.</p>
                   </div>
                   <div class="item mb-40">
                      <h4><span class="item-icon"><i class="fas fa-briefcase"></i></span><a href="https://www.appzonegroup.com" target="_blank">Appzone Group</a></h4>
