--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,10 @@
             <div class="collapse navbar-collapse" id="nav">
                <!-- Nav-links -->
                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+                  <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                   <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                   <li class="nav-item"><a href="#resume" class="nav-link">Experience</a></li>
+                  <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                </ul>
             </div>
          </div>
@@ -119,7 +120,6 @@
                <div class="social pl-md-5 p-4">
                   <!-- Social -->
                   <ul class="social-icon">
-                     <li><a href="https://www.facebook.com/bidemi.ajala" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
                      <li><a href="https://www.instagram.com/bid.emi/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                      <li><a href="https://www.linkedin.com/in/bidemi-ajala-9ab0797b/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                      <li><a href="https://github.com/bidemiajala" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -245,10 +245,10 @@
                      </div>
                   </div>
                   <div class="skill-item">
-                     <h5>Java</h5>
-                     <span>60%</span>
-                     <div class="progress" data-percent="60%">
-                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                     <h5>Cypress.io</h5>
+                     <span>70%</span>
+                     <div class="progress" data-percent="70%">
+                        <div class="progress-bar bar-null" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
                      </div>
                   </div>
                   <div class="skill-item">
@@ -380,6 +380,40 @@
       </section>
       <!-- Resume Section End -->
 
+            <!-- Projects Section -->
+            <section class="section bg-dots" id="projects">
+               <div class="container">
+                  <div class="row justify-content-center mb-5 pb-3">
+                     <div class="col-md-7 heading-section  text-center">
+                        <div class=" white section-title-uin"> PROJECTS </div>
+                        <h2 class="mb-4">Pet Projects</h2>
+                        <p class="flip"><span class="deg1"></span><span class="deg2"></span><span class="deg3"></span></p>
+                        <p class="mt-5">In my spare time, I work to help make life for QA Engineers easier. <br/> Here's what I've done to that effect so far:</p>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-md-6">
+                        <div class="item mb-40">
+                           <h4><span class="item-icon"><i class="fas fa-code"></i></span><a href="https://github.com/bidemiajala/cy-ui-framework" target="_blank">UI Test Automation Framework</a></h4>
+                           <span class="meta">Javascript</span>
+                           <h5>Used Cypress.io E2E Testing Tool</h5>
+                           <p>I designed this test automation framework using the page object model pattern it also has an option for BDD features using Gherkin syntax.</p>
+                        </div>
+                     </div>
+                     <div class="col-md-6">
+                        <div class="item mb-40">
+                           <h4><span class="item-icon"><i class="fas fa-code"></i></span><a href="https://github.com/bidemiajala/rest-api-framework" target="_blank">API Test Automation Framework</a></h4>
+                           <span class="meta">Javascript</span>
+                           <h5>Used Cypress.io E2E Testing Tool</h5>
+                           <p>I designed this data-driven test automation framework for REST APIs.
+                           </p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </section>
+            <!-- Projects End -->
+
       <!-- Footer -->
       <footer class="footer section img" id="footer">
          <div class="overlay"></div>
@@ -392,7 +426,6 @@
 
                   <!-- Social -->
                   <p class="social-icon">
-                     <a href="https://www.facebook.com/bidemi.ajala" target="_blank"><i class="fab fa-facebook-square"></i></a>
                      <a href="https://www.instagram.com/bid.emi/" target="_blank"><i class="fab fa-instagram"></i></a>
                      <a href="https://github.com/bidemiajala" target="_blank"><i class="fab fa-github"></i></a>
                      <a href="https://www.linkedin.com/in/bidemi-ajala-9ab0797b/" target="_blank"><i class="fab fa-linkedin"></i></a>
