added a link to my ISTQB certificate

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Bidemi Ajala, Fullstack QA Engineer and Web Developer" />
-      <meta name="keywords" content="QA, Testing, Web, Development, Web Development, Bidemi Ajala, Bidemi, Ajala, Intelia, Google" />
+      <meta name="description" content="Bidemi Ajala, Fullstack QA Automation Engineer and Web Developer" />
+      <meta name="keywords" content="QA, Testing, Web, Development, Web Development, Bidemi Ajala, Bidemi, Ajala, Intelia, Google, Cypress" />
       <meta name="author" content="Bidemi Ajala" />
       <!--Favicons-->
       <link rel="shortcut icon" href="images/favicon.png">
@@ -143,10 +143,11 @@
                      <h2>I'm Bidemi Ajala</h2>
                      <h3>Fullstack QA Engineer</h3>
                   </div>
-                  <p>I am an experienced ISTQB Certified Quality Assurance Engineer with over 4years in the software industry. I currently lead the QA team at <a href="https://www.intelia.io" target="_blank">Intelia Inc</a> based in Lagos, Nigeria. <br/>
-                     When I'm not busy at Intelia, I freelance through my company (<a href="https://www.netface.co">Netface</a>) as a web developer and Wordpress Engineer for clients both home and abroad.<br/>
-                     When I'm not at Intelia or Netface, I read (mostly) self-help books, watch movies, try out different cuisines and (rarely) find myself in the gym!<br/>
-                     You can check out some stuff I've done <a href="https://github.com/bidemiajala" target="_blank">here</a>.</p>
+                  <p>I am an <a href="https://drive.google.com/file/d/1VI2EdqUq9XJC36j0v0EwpLw0tqizCDEo/view?usp=sharing" target="_blank">ISTQB Certified Quality Assurance Engineer</a> 
+                     with over six years of experience in the software industry. I currently lead the QA team at <a href="https://www.intelia.io" target="_blank">Intelia Inc</a> based in Lagos, Nigeria. <br/>
+                     When I'm not busy at Intelia, I freelance through my company <a href="https://www.netface.co" target="_blank"></a>Netface</a>) as a web developer and Wordpress Engineer for clients both home and abroad.<br/>
+                     When I'm not at Intelia or Netface, I read (mostly) self-help books, watch movies, travel, try out different cuisines, and (rarely) find myself in the gym!<br/>
+                     You can check out some (awesome) stuff I've done <a href="https://github.com/bidemiajala" target="_blank">here</a>.</p>
                   <hr>
                   <div class="content-info mt-40 mb-40">
                      <div class="row">
