Issues with brackets

--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
                   </div>
                   <p>I am an <a href="https://drive.google.com/file/d/1VI2EdqUq9XJC36j0v0EwpLw0tqizCDEo/view?usp=sharing" target="_blank">ISTQB Certified Quality Assurance Engineer</a> 
                      with over six years of experience in the software industry. I currently lead the QA team at <a href="https://www.intelia.io" target="_blank">Intelia Inc</a> based in Lagos, Nigeria. <br/>
-                     When I'm not busy at Intelia, I freelance through my company <a href="https://www.netface.co" target="_blank"></a>Netface</a>) as a web developer and Wordpress Engineer for clients both home and abroad.<br/>
+                     When I'm not busy at Intelia, I freelance through my company (<a href="https://www.netface.co" target="_blank">Netface</a>) as a web developer and Wordpress Engineer for clients both home and abroad.<br/>
                      When I'm not at Intelia or Netface, I read (mostly) self-help books, watch movies, travel, try out different cuisines, and (rarely) find myself in the gym!<br/>
                      You can check out some (awesome) stuff I've done <a href="https://github.com/bidemiajala" target="_blank">here</a>.</p>
                   <hr>
