added spotify account

--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
                         <div class="icon"><i class="fas fa-envelope"></i></div>
                         <div class="text">
                            <h3>Email</h3>
-                           <p>bidemiajala@gmail.com</p>
+                           <a href="mailto:bidemiajala@gmail.com?subject=Mail from your portfolio site&body=Hello Bidemi,"><p>bidemiajala@gmail.com</p></a>
                         </div>
                      </div>
                   </div>
@@ -120,9 +120,10 @@
                <div class="social pl-md-5 p-4">
                   <!-- Social -->
                   <ul class="social-icon">
-                     <li><a href="https://www.instagram.com/bid.emi/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                      <li><a href="https://www.linkedin.com/in/bidemi-ajala-9ab0797b/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                      <li><a href="https://github.com/bidemiajala" target="_blank"><i class="fab fa-github"></i></a></li>
+                     <li><a href="https://www.instagram.com/bid.emi/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                     <li><a href="https://open.spotify.com/user/jlmnwzz0sp3hv1hqiykwefl5v" target="_blank"><i class="fab fa-spotify"></i></a></li>
                   </ul>
                </div>
             </div>
@@ -161,7 +162,7 @@
                            <span>
                               Email:
                            </span>
-                           <p><a href="mailto:bidemiajala@gmail.com">bidemiajala@gmail.com</a></p>
+                           <p><a href="mailto:bidemiajala@gmail.com?subject=Mail from your portfolio site&body=Hello Bidemi,">bidemiajala@gmail.com</a></p>
                         </div>
                         <div class="col-lg-4 col-md-12 col-sm-12 single-info">
                            <span>
@@ -427,9 +428,10 @@
 
                   <!-- Social -->
                   <p class="social-icon">
-                     <a href="https://www.instagram.com/bid.emi/" target="_blank"><i class="fab fa-instagram"></i></a>
                      <a href="https://github.com/bidemiajala" target="_blank"><i class="fab fa-github"></i></a>
                      <a href="https://www.linkedin.com/in/bidemi-ajala-9ab0797b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                     <a href="https://www.instagram.com/bid.emi/" target="_blank"><i class="fab fa-instagram"></i></a>
+                     <a href="https://open.spotify.com/user/jlmnwzz0sp3hv1hqiykwefl5v" target="_blank"><i class="fab fa-spotify"></i></a>
                   </p>
 
                   <!-- Copyright -->
